# lanlan-robot

./: .editorconfig  .env.example  .gitignore  BACKEND_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: .env.example  API_EXAMPLES.md  Clippy.toml  Dockerfile  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml
backend/fixtures/: README.md  sample.dxf  sample_gbk.dxf  sample_utf8.dxf
backend/migrations/: README.md  (+6 more)
backend/server/: CHANGELOG.md  Cargo.toml  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STATUS.md  check.sh  sqlx-data.json  verify.sh
backend/server/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
backend/server/src/models/: entity.rs  file.rs  layer.rs  mod.rs  parsed_entity.rs  project.rs
backend/server/src/routes/: files.rs  health.rs  mod.rs  parse.rs
backend/server/src/services/: dxf_parser.rs  file_storage.rs  mod.rs  persist.rs
backend/server/src/services/parser/: arc.rs  circle.rs  insert.rs  line.rs  mod.rs  polyline.rs  text.rs
backend/server/tests/: acceptance.rs  config.rs  health.rs  integration.rs  parse_flow.rs  parser.rs  upload.rs
frontend/: .eslintrc.cjs  DATA_LAYER_README.md  Dockerfile  README.md  eslint.config.js  index.html  package.json  vite.config.ts
migrations/: 20231101000001_init_schema.down.sql  20231101000002_seed_data.down.sql  20231101000003_add_file_metadata.up.sql
(+49 files in other folders)
